--- a/allreferences.bib
+++ b/allreferences.bib
@@ -2172,12 +2172,13 @@ year={2021}
   organization={PMLR}
 }
 
-@inproceedings{kim2019multiaccuracy,
-  title={Multiaccuracy: Black-box post-processing for fairness in classification},
-  author={Kim, Michael P and Ghorbani, Amirata and Zou, James},
-  booktitle={Proceedings of the 2019 AAAI/ACM Conference on AI, Ethics, and Society},
-  pages={247--254},
-  year={2019}
+@InProceedings{hebert2018multicalibration,
+  title = 	 {Multicalibration: Calibration for the ({C}omputationally-Identifiable) Masses},
+  author =       {Hebert-Johnson, Ursula and Kim, Michael and Reingold, Omer and Rothblum, Guy},
+  booktitle={International Conference on Machine Learning (ICML)},
+  pages = 	 {1939--1948},
+  year = 	 {2018},
+  publisher =    {PMLR}
 }
 
 @Misc{ heritagehealth,
